package backend;

import java.util.LinkedList;


/* CanvasState es una lista para administrar las figuras, extiende
* LinkedList ya que no le agrega ninguna funcionalidad adicional.
*/
public class CanvasState<E> extends LinkedList<E> {
}
